--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
   "dependencies": {
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
+    "@vitejs/plugin-react": "^4.3.4",
     "hono": "^4.7.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-server-dom-webpack": "^19.1.0",
+    "react-streaming": "^0.3.50",
     "typescript": "^5.8.2",
     "vike": "^0.4.227",
     "vike-server": "^1.0.8",
