--- a/package.json
+++ b/package.json
@@ -1,32 +1,18 @@
 {
-  "name": "vike-react-rsc",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "dev": "vike dev",
-    "build": "vike build",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "packageManager": "pnpm@10.7.0",
-  "dependencies": {
-    "@hiogawa/transforms": "^0.0.0",
-    "@hiogawa/utils": "^1.7.0",
-    "@types/react": "^19.0.12",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
-    "hono": "^4.7.5",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-server-dom-webpack": "^19.1.0",
-    "react-streaming": "^0.3.50",
-    "typescript": "^5.8.2",
-    "vike": "^0.4.227",
-    "vike-server": "^1.0.8",
-    "vite": "^6.2.3"
-  }
+    "name": "root",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "pnpm": {
+        "overrides": {
+            "vike-react-rsc": "link:./packages/vike-react-rsc/"
+        }
+    },
+    "devDependencies": {
+        "typescript": "^5.8.2"
+    },
+    "scripts": {
+        "build": "pnpm --recursive --filter {packages/*} --filter {test/*}  run build"
+    },
+    "packageManager": "pnpm@10.7.0+sha512.6b865ad4b62a1d9842b61d674a393903b871d9244954f652b8842c2b553c72176b278f64c463e52d40fff8aba385c235c8c9ecf5cc7de4fd78b8bb6d49633ab6"
 }
