--- a/examples/full/package.json
+++ b/examples/full/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "vike dev",
     "build": "vike build",
+    "start": "NODE_ENV=production node dist/server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
