--- a/examples/full/tsconfig.json
+++ b/examples/full/tsconfig.json
@@ -20,10 +20,7 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
-
-    /* Import aliases */
-    "baseUrl": "."
+    "noFallthroughCasesInSwitch": true
   },
   "include": ["src"],
   "exclude": ["node_modules"]
