--- a/packages/vike-react-rsc/package.json
+++ b/packages/vike-react-rsc/package.json
@@ -12,17 +12,16 @@
     "./__internal/integration/onRenderHtml": "./dist/integration/onRenderHtml.js",
     "./__internal/integration/onRenderClient": "./dist/integration/onRenderClient.js",
     "./__internal/integration/onBeforeRender": "./dist/integration/onBeforeRender.js",
-    "./__internal/integration/onPageTransitionStart": "./dist/integration/onPageTransitionStart.js",
-    "./__internal/integration/serverActionMiddleware": "./dist/integration/serverActionMiddleware.js",
+    "./__internal/integration/rscMiddleware": "./dist/integration/rscMiddleware.js",
     "./__internal/integration/client": "./dist/integration/client.js",
     "./__internal/register/browser": "./dist/register/browser.js",
     "./__internal/register/server": "./dist/register/server.js",
     "./__internal/register/ssr": "./dist/register/ssr.js",
     "./__internal/runtime/server": "./dist/runtime/server.js",
     "./__internal/runtime/ssr": "./dist/runtime/ssr.js",
-    "./usePageContext": {
-      "react-server": "./dist/hooks/usePageContext/usePageContext-server.js",
-      "default": "./dist/hooks/usePageContext/usePageContext-client.js"
+    "./pageContext": {
+      "react-server": "./dist/hooks/pageContext/pageContext-server.js",
+      "default": "./dist/hooks/pageContext/pageContext-client.js"
     }
   },
   "files": [
