--- a/examples/full/package.json
+++ b/examples/full/package.json
@@ -18,13 +18,17 @@
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
+    "express": "^4.x",
     "hono": "^4.7.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "typescript": "^5.8.2",
     "vike": "^0.4.227",
+    "vike-react-rsc": "^1.0.0",
     "vike-server": "^1.0.8",
-    "vite": "^6.2.3",
-    "vike-react-rsc": "^1.0.0"
+    "vite": "^6.2.3"
+  },
+  "devDependencies": {
+    "@types/express": "^4.x"
   }
 }
