--- a/examples/full/package.json
+++ b/examples/full/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.7.0",
   "dependencies": {
+    "@compiled/react": "^0.18.3",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
@@ -26,7 +27,8 @@
     "vike": "^0.4.227",
     "vike-react-rsc": "^1.0.0",
     "vike-server": "^1.0.8",
-    "vite": "^6.2.3"
+    "vite": "^6.2.3",
+    "vite-plugin-compiled-react": "1.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.x"
