--- a/examples/full/package.json
+++ b/examples/full/package.json
@@ -7,8 +7,9 @@
   "scripts": {
     "dev": "vike dev",
     "build": "vike build",
-    "start": "NODE_ENV=production node dist/server/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "NODE_ENV=production node dist/server/index.standalone.mjs",
+    "preview": "vike build && cross-env NODE_ENV=production wrangler pages dev",
+    "deploy": "vike build && cross-env NODE_ENV=production wrangler pages deploy"
   },
   "keywords": [],
   "author": "",
@@ -25,10 +26,12 @@
     "react-dom": "^19.1.0",
     "typescript": "^5.8.2",
     "vike": "^0.4.227",
+    "vike-cloudflare": "^0.2.3",
     "vike-react-rsc": "^1.0.0",
     "vike-server": "^1.0.8",
     "vite": "^6.2.3",
-    "vite-plugin-compiled-react": "1.2.0"
+    "vite-plugin-compiled-react": "1.2.0",
+    "wrangler": "^4.7.2"
   },
   "devDependencies": {
     "@types/express": "^4.x"
