--- a/packages/vike-react-rsc/package.json
+++ b/packages/vike-react-rsc/package.json
@@ -52,7 +52,7 @@
     "react-dom": "^19.1.0",
     "tsdown": "^0.6.10",
     "typescript": "^5.8.2",
-    "vike": "^0.4.227",
+    "vike": "0.4.228-commit-1553dee",
     "vite": "^6.2.3"
   }
 }
