--- a/examples/full/package.json
+++ b/examples/full/package.json
@@ -20,6 +20,7 @@
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
+    "cross-env": "^7.0.3",
     "express": "^4.x",
     "hono": "^4.7.5",
     "react": "^19.1.0",
