--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
         }
     },
     "devDependencies": {
+        "@brillout/test-e2e": "^0.6.8",
+        "@brillout/test-types": "^0.1.15",
+        "playwright": "^1.51.1",
         "typescript": "^5.8.2"
     },
     "scripts": {
-        "build": "pnpm --recursive --filter {packages/*} --filter {test/*}  run build"
+        "test": "pnpm run test:units && pnpm run test:e2e",
+        "test:e2e": "test-e2e",
+        "test:units": "pnpm --recursive --sequential --filter {packages/*} run test",
+        "test:types": "test-types"
     },
     "packageManager": "pnpm@10.7.0+sha512.6b865ad4b62a1d9842b61d674a393903b871d9244954f652b8842c2b553c72176b278f64c463e52d40fff8aba385c235c8c9ecf5cc7de4fd78b8bb6d49633ab6"
 }
