--- a/examples/full/package.json
+++ b/examples/full/package.json
@@ -32,7 +32,8 @@
     "vike-server": "^1.0.8",
     "vite": "^6.2.3",
     "vite-plugin-compiled-react": "1.3.1",
-    "wrangler": "^4.7.2"
+    "wrangler": "^4.7.2",
+    "standaloner": "0.1.3"
   },
   "devDependencies": {
     "@types/express": "^4.x"
