--- a/packages/vike-react-rsc/package.json
+++ b/packages/vike-react-rsc/package.json
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "@brillout/vite-plugin-server-entry": "^0.7.5",
+    "@hiogawa/vite-rsc": "0.0.1-pre.1",
     "@types/react": "^19.0.12",
     "@types/react-dom": "^19.0.4",
     "react": "^19.1.0",
