--- a/examples/full/package.json
+++ b/examples/full/package.json
@@ -16,24 +16,24 @@
   "license": "ISC",
   "packageManager": "pnpm@10.7.0",
   "dependencies": {
-    "@compiled/react": "^0.18.3",
-    "@types/react": "^19.0.12",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
+    "@compiled/react": "^0.18.6",
+    "@types/react": "^19.2.5",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.1",
     "cross-env": "^7.0.3",
     "express": "^4.x",
     "hono": "^4.7.5",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "typescript": "^5.8.2",
-    "vike": "0.4.228-commit-1553dee",
-    "vike-cloudflare": "^0.2.3",
+    "vike": "^0.4.246",
+    "vike-cloudflare": "^0.2.7",
     "vike-react-rsc": "^1.0.0",
-    "vike-server": "^1.0.8",
-    "vite": "^6.2.3",
+    "vike-server": "^1.0.25",
+    "vite": "^7.2.2",
     "vite-plugin-compiled-react": "1.3.1",
     "wrangler": "^4.7.2",
-    "standaloner": "0.1.3"
+    "standaloner": "0.1.4"
   },
   "devDependencies": {
     "@types/express": "^4.x"
