--- a/packages/vike-react-rsc/package.json
+++ b/packages/vike-react-rsc/package.json
@@ -43,7 +43,6 @@
     "@brillout/json-serializer": "^0.5.15",
     "@hiogawa/transforms": "^0.0.0",
     "@hiogawa/utils": "^1.7.0",
-    "react-server-dom-webpack": "^19.2.0",
     "react-streaming": "^0.4.12"
   },
   "devDependencies": {
@@ -55,6 +54,8 @@
     "tsdown": "^0.6.10",
     "typescript": "^5.8.2",
     "vike": "0.4.246",
-    "vite": "^7.2.2"
+    "vite": "^7.2.2",
+    "@vitejs/plugin-rsc": "^0.5.1",
+    "vitefu": "^1.1.1"
   }
 }
